# mistral-api-rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
components/: __init__.py  chatbox.py  page_state.py
components/tabs/: file_upload.py  github_repo.py  local_files.py  settings.py
utils/: llama_index.py  mistral.py
