[project]
name = ""
version = "0.0.1"
requires-python = "~=3.10"
dependencies = [
    "streamlit",
    "llama-index",
    "llama-index-llms-mistralai",
    "llama-index-embeddings-mistralai",
    "llama-index-vector-stores-chroma",
    "pycryptodome",
    "nbconvert",
    "protobuf==3.20.3",
    "pysqlite3-binary"
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
